UPDATE: make project responsive for smaller devices, fix placeholder and buttons overflow on small screens, add media

--- a/style.css
+++ b/style.css
@@ -36,7 +36,7 @@ h1 {
     display: flex;
     gap: 10px;
     margin-bottom: 20px;
-
+    flex-wrap: wrap;
     transition-property: transform;
     transition-duration: 0.3s;
     transition-timing-function: ease;
@@ -124,6 +124,7 @@ h1 {
     display: flex;
     gap: 10px;
     margin-bottom: 20px;
+    flex-wrap: wrap;
 
     transition-property: transform;
     transition-duration: 0.3s;
@@ -175,6 +176,7 @@ h1 {
     padding: 10px;
     margin-top: 20px;
     margin-bottom: 20px;
+    flex-wrap: wrap;
     
     transition-property: transform;
     transition-duration: 0.3s;
@@ -200,4 +202,21 @@ h1 {
 }
 .operations{
     margin-left: 10px;
+}
+
+@media (max-width:768px) {
+
+    .container{
+        width: 90%;
+    }
+
+    .style-section{
+        width: 90%;
+        
+    }
+
+    .input-section input{
+        flex: 1;
+        
+    }
 }
